2008-03-31  Luis Lavena  <luislavena@gmail.com>

	* test/: Allow tests to use a random (but controlled) port number 
	instead of a hardcoded one. This helps CI tools when running 
	parallels builds.

2008-03-30  Luis Lavena  <luislavena@gmail.com>

	* test/test_gem.rb: Leave APPLE_GEM_HOME tests only to *nixes.
	* lib/rubygems/remote_fetcher.rb: Errno::ECONNABORTED raised on Windows
	on closed Keep-Alive connections.

2008-03-29  Eric Hodel  <drbrain@segment7.net>

	* gemspecs/:  Removed.
	* examples/:  Removed.
	* doc/design/:  Removed.
	* doc/rdoc_templates/:  Removed.
	* Rakefile:  Package doc/release_notes/.
	* setup.rb:  Use full path to release_notes, ensure RDoc can be
	both removed and installed.

2008-03-28  Eric Hodel  <drbrain@segment7.net>

	* bin/gem, Rakefile:  RubyGems now requires Ruby > 1.8.3.
	* lib/rubygems.rb:  Added Gem.ruby_version, Gem.read_binary,
	Gem.binary_mode.
	* lib/, test/:  Read files in binary mode for windows and ruby 1.9.
	* lib/rubygems/commands/update_command.rb:  Only update once.
	* lib/rubygems/commands/sources_command.rb:  Ditto.
	* lib/rubygems/source_index.rb:  Fix #remove_extra, #find_missing so
	legacy platform gems don't get updated repeatedly.
	* doc/release_notes/rel_1_1_0.rdoc:  RubyGems 1.1.0 release notes.
	* lib/rubygems/rubygems_version.rb:  1.1.0.

2008-03-28  Ryan Woodrum  <rwoodrum@avvo.com>

	* lib/rubygems/commands/query_command.rb: Add --installed
	subcommand to check if a gem and/or version is installed.
	* test/test_gem_commands_query_command.rb: Add relevant tests.
	* test/gemutilities.rb: Override exit() for query tests.
	* test/mockgemui.rb: Add =() to manipulate output values (clear).

2008-03-28  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems/source_info_cache.rb: Add reset_cache_file.

2008-03-27  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems/user_interaction.rb: Raise Gem::SystemExitException
	instead of exiting, kill unused terminate_interaction!.